<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF2F4"
    android:orientation="vertical">
    <include
        android:id="@+id/appbar"
        layout="@layout/title_bar_main_new"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp5"
        app:layout_constraintBottom_toTopOf="@id/btn_naptien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_tkchinh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@color/white"
                android:padding="@dimen/dp15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:src="@drawable/icon_monney"
                    android:id="@+id/img_lable1"
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginLeft="@dimen/dp40"
                    android:fontFamily="@font/roboco"
                    android:gravity="center_vertical"
                    android:text="@string/lable_account_main"
                    android:textColor="@color/red_test365"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/txt_account_main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_lable1"
                    android:fontFamily="@font/roboco"
                    android:gravity="center"
                    android:textColor="@color/red_test365"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout

                android:id="@+id/rl_tkthuong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp10"
                android:background="@color/white"
                android:padding="@dimen/dp15"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rl_tkchinh">

                <ImageView
                    android:src="@drawable/icon_monney"
                    android:id="@+id/img_lable2"
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp30"
                    android:layout_marginLeft="@dimen/dp40"
                    android:fontFamily="@font/roboco"
                    android:gravity="center_vertical"
                    android:text="@string/lable_account_bonus"
                    android:textColor="@color/red_test365"
                    android:textSize="@dimen/text_15sp" />

                <TextView
                    android:id="@+id/txt_bonus_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img_lable2"
                    android:fontFamily="@font/roboco"
                    android:gravity="center"
                    android:textColor="@color/red_test365"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_lable_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:background="@color/bottom_bar"
                android:padding="@dimen/dp10"
                android:text="LỊCH SỬ GIAO DỊCH"
                android:textColor="@color/white"
                android:textSize="@dimen/text_18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rl_tkthuong" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycle_history"
                android:layout_marginLeft="@dimen/dp10"
                android:layout_marginRight="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_lable_history">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>



    <Button
        android:id="@+id/btn_naptien"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp40"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp5"
        android:background="@drawable/spr_click_button"
        android:text="@string/lable_recharge"
        android:textColor="@color/white"
        android:textSize="@dimen/text_17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>